# manticoresearch-rs

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  build.rs
src/: lib.rs  migrator.rs
src/apis/: configuration.rs  index_api.rs  mod.rs  search_api.rs  utils_api.rs
src/models/: aggregation.rs  aggregation_sort_inner_value.rs  aggregation_terms.rs  bool_filter.rs  bulk_response.rs  delete_document_request.rs  delete_response.rs  equals_filter.rs  error_response.rs  facet.rs  filter_boolean.rs  filter_number.rs  filter_string.rs  geo_distance_filter.rs  geo_distance_filter_location_anchor.rs  highlight.rs  highlight_field.rs  in_filter.rs  insert_document_request.rs  match_filter.rs  match_op.rs  match_op_filter.rs  match_phrase_filter.rs  mod.rs  not_filter_boolean.rs  not_filter_number.rs  not_filter_string.rs  percolate_request.rs  percolate_request_query.rs  query_filter.rs  range_filter.rs  search_request.rs  search_response.rs  search_response_hits.rs  sort_multiple.rs  sort_mva.rs  sort_order.rs  source_by_rules.rs  success_response.rs  update_document_request.rs  (+1 more)
