[package]
name = "manticoresearch-rs"
version = "0.1.0"
edition = "2021"
author = ["maksim.ryndin@gmail.com"]

[[bin]]
name = "migrator"
required-features = ["migrate"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = {version = "^0.11", default-features = false, features = ["json", "multipart", "rustls-tls"]}
reqwest-middleware = "0.1.1"
# optional
chrono = { version = "0.4", features = ["serde"], optional = true }
clap = { version = "4.4.6", features = ["derive", "cargo"], optional = true }
serde_repr = { version = "0.1", optional = true }
tokio = { version = "^1.0", features = ["fs", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }

[features]
default = []
migrate = ["chrono", "clap", "serde_repr", "tokio", "tracing", "tracing-subscriber"]